# leptos-struct-table

./: Cargo.toml
